--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 matplotlib==2.2.2
 pandas==0.23.0
 keras==2.1.5
-numpy==1.12.1
-ipykernel==4.8.2
-tqdm==4.23.4
-scikit-learn==0.19.1
+numpy
+ipykernel
+tqdm
+scikit-learn
 pillow
 kaggle
 opencv-python
 tensorflow
 seaborn
+picasso-viz
