--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==2.2.2
 pandas==0.23.0
 keras==2.1.5
-numpy==1.12.1
+numpy
 ipykernel==4.8.2
 tqdm==4.23.4
 scikit-learn==0.19.1
@@ -9,4 +9,4 @@ pillow
 kaggle
 opencv-python
 tensorflow
-whale-id
+livelossplot
