--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 matplotlib==2.2.2
 pandas==0.23.0
-keras==2.1.5
+keras
 numpy
 ipykernel==4.8.2
 tqdm==4.23.4
@@ -8,6 +8,6 @@ scikit-learn==0.19.1
 pillow
 kaggle
 opencv-python
-tensorflow
+tensorflow==1.8.0
 livelossplot
 h5py
