--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 matplotlib==2.2.2
 pandas==0.23.0
-keras
+keras==2.1.6
 numpy
 ipykernel==4.8.2
 tqdm==4.23.4
@@ -11,3 +11,4 @@ opencv-python
 tensorflow==1.8.0
 livelossplot
 h5py
+keras-vis
